Archive2/09/e89380683100ef/output
main.cpp:4:7: error: rvalue reference to type 'int' cannot bind to lvalue of type 'int'
int &&b = z;
      ^   ~
1 error generated.
